objects/H2S__HarvestProject__c.object
<CustomObject>
    <description>HarvestSync for Salesforce - Project object used by the HarvestSync for Salesforce system integration when client does not already have a custom object for managing projects.</description>
    <fields>
        <fullName>H2S__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of client account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>HarvestProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>H2S__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H2S__BudgetIncludesProjectExpenses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If project expenses (e.g., travel) are included in the budget, then check this box.</inlineHelpText>
        <label>Budget includes project expenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H2S__Budget__c</fullName>
        <inlineHelpText>How is budgeting done for this project?</inlineHelpText>
        <label>Budget</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No budget</fullName>
                </value>
                <value>
                    <fullName>Total project hours</fullName>
                </value>
                <value>
                    <fullName>Total project fees</fullName>
                </value>
                <value>
                    <fullName>Hours per task</fullName>
                </value>
                <value>
                    <fullName>Hours per person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>H2S__BurnPercent__c</fullName>
        <formula>if( H2S__TotalProjectHours__c &gt;0, H2S__TotalTime__c /  H2S__TotalProjectHours__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time Logged / Total Hour Budget</inlineHelpText>
        <label>Burn %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>H2S__Burn__c</fullName>
        <description>100 is the total max width in pixels; 15 is height in pixels.
/s.gif</description>
        <formula>if(or( ISBLANK( H2S__TotalProjectHours__c ) ,H2S__TotalProjectHours__c=0),&quot;No Budget&quot;,
if(H2S__TotalProjectHours__c&gt;0,if( H2S__TotalTime__c  /  H2S__TotalProjectHours__c  &gt; 1, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 100) ,
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, (H2S__TotalTime__c / H2S__TotalProjectHours__c ) * 100) &amp; IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, 100 - ((H2S__TotalTime__c / H2S__TotalProjectHours__c) * 100))),&quot;&quot;)&amp;&quot; &quot;&amp;text( round(H2S__BurnPercent__c *100,0))&amp;&quot;%&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logged Hours / Budgeted Hours</inlineHelpText>
        <label>Burn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H2S__ClientProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact record who is serving as our point-contact at the Client for this project.</inlineHelpText>
        <label>Client Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>HarvestProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>H2S__DateCompleted__c</fullName>
        <inlineHelpText>Date the project was completed.  Used to stop ticker on Project Days.</inlineHelpText>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>H2S__DateStarted__c</fullName>
        <inlineHelpText>Date the project was officially started.  Used to calculate Project Days.</inlineHelpText>
        <label>Date Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>H2S__DaysSinceLastActivity__c</fullName>
        <formula>today()- LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since an activity (task, email, call notes, event, etc.) has been logged against this project</inlineHelpText>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H2S__DaysSinceTimeLastLogged__c</fullName>
        <formula>today()- H2S__LastTimeLogged__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since a time card has been logged.</inlineHelpText>
        <label>Days Since Time Last Logged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H2S__EarliestTimeLogged__c</fullName>
        <inlineHelpText>Date the first time card was logged.</inlineHelpText>
        <label>Earliest Time Logged</label>
        <summarizedField>H2S__HarvestTimeEntry__c.H2S__Date__c</summarizedField>
        <summaryForeignKey>H2S__HarvestTimeEntry__c.H2S__HarvestProject__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>H2S__HarvestProjectID__c</fullName>
        <description>Harvest&apos;s Unique ID for the Harvest Project. This value can retrieved from the the URL of Harvest&apos;s Project screen.</description>
        <externalId>true</externalId>
        <inlineHelpText>Harvest&apos;s Unique ID for the Harvest Project. ID can retrieved from the the URL of Harvest&apos;s project screen. It will be automatically populated if you do NOT have the Sync with Harvest Project ID checked in the Settings tab or you must populate manually.</inlineHelpText>
        <label>Harvest Project ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>H2S__InvoiceMethod__c</fullName>
        <label>Invoice Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>This project is not billable</fullName>
                </value>
                <value>
                    <fullName>This project is billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>H2S__InvoicedTime__c</fullName>
        <inlineHelpText>Time cards which have been marked as &quot;invoiced&quot; (lock) in Harvest.</inlineHelpText>
        <label>Invoiced Time</label>
        <summarizedField>H2S__HarvestTimeEntry__c.H2S__Duration__c</summarizedField>
        <summaryFilterItems>
            <field>H2S__HarvestTimeEntry__c.H2S__Invoiced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>H2S__HarvestTimeEntry__c.H2S__HarvestProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>H2S__LastHarvestSync__c</fullName>
        <label>Last Harvest Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>H2S__LastTimeLogged__c</fullName>
        <inlineHelpText>Most recent date of time cards logged.</inlineHelpText>
        <label>Last Time Logged</label>
        <summarizedField>H2S__HarvestTimeEntry__c.H2S__Date__c</summarizedField>
        <summaryForeignKey>H2S__HarvestTimeEntry__c.H2S__HarvestProject__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>H2S__NoOfEntries__c</fullName>
        <inlineHelpText>number of time cards created by HarvestSync and manually.</inlineHelpText>
        <label># of Entries</label>
        <summaryForeignKey>H2S__HarvestTimeEntry__c.H2S__HarvestProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>H2S__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>HarvestProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>H2S__PercentOfBudgetAlert__c</fullName>
        <inlineHelpText>If project budget reaches this percentage, send email alerts.  Leave blank to disable alerts</inlineHelpText>
        <label>% of Budget Alert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>H2S__ProjectCodeExternalId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>If your Harvest project already has a PROJECT CODE, enter the project code here to use the code in Harvest as the external key. If you leave this field blank, then populate the Project Code in Harvest with the auto-generated Project Code from this record.</inlineHelpText>
        <label>Project Code External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H2S__ProjectCode__c</fullName>
        <displayFormat>PID-{0}</displayFormat>
        <inlineHelpText>Auto-assigned project ID.  Used to sync to Harvest.</inlineHelpText>
        <label>Project Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>H2S__ProjectDays__c</fullName>
        <formula>if( ISBLANK( H2S__DateCompleted__c ) ,today()- H2S__DateStarted__c , H2S__DateCompleted__c -  H2S__DateStarted__c )</formula>
        <inlineHelpText>Days from Date Started to Dated Completed (or TODAY if project is still active)</inlineHelpText>
        <label>Project Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H2S__ProjectHourlyRate__c</fullName>
        <inlineHelpText>If this is a billable by a project hourly rate, what is the rate?  Leave blank otherwise.</inlineHelpText>
        <label>Project Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H2S__ProjectInvoicedBy__c</fullName>
        <inlineHelpText>If this is a billable project, how do we invoice for this project?</inlineHelpText>
        <label>Project invoiced by</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>H2S__InvoiceMethod__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Task hourly rate</fullName>
                </value>
                <value>
                    <fullName>Person hourly rate</fullName>
                </value>
                <value>
                    <fullName>Project hourly rate</fullName>
                </value>
                <value>
                    <fullName>Do not apply hourly rate</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>H2S__ProjectNotes__c</fullName>
        <inlineHelpText>Notes are displayed on the complete project report in Harvest and, only administrator or a project manager can see them.</inlineHelpText>
        <label>Project Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>H2S__ProjectStage__c</fullName>
        <inlineHelpText>Indicate where in the work cycle we are with this Project</inlineHelpText>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0: Kick-off Process</fullName>
                </value>
                <value>
                    <fullName>1: Discovery Process</fullName>
                </value>
                <value>
                    <fullName>2: Working</fullName>
                </value>
                <value>
                    <fullName>3: Training Process</fullName>
                </value>
                <value>
                    <fullName>4: Sign-off Process</fullName>
                </value>
                <value>
                    <fullName>9: Completed</fullName>
                </value>
                <value>
                    <fullName>X: Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>H2S__ProjectType__c</fullName>
        <inlineHelpText>Type of project</inlineHelpText>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>H2S__SyncStatus__c</fullName>
        <inlineHelpText>Indicates the status of pairing the salesforce.co HarvestProject record to an associated Project record in Harvest.</inlineHelpText>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Status Unknown</fullName>
                    <default>true</default>
                    <label>Status Unknown</label>
                </value>
                <value>
                    <fullName>Harvest Project Linked</fullName>
                </value>
                <value>
                    <fullName>Harvest Project Not Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>H2S__TotalProjectFees__c</fullName>
        <inlineHelpText>If this project is budgeted based on total fees, what is the total fee budget?  Leave blank otherwise.</inlineHelpText>
        <label>Total Project Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H2S__TotalProjectHours__c</fullName>
        <inlineHelpText>If this project is budgeted by hours, what is the budget in hours for the project.  Leave blank otherwise.</inlineHelpText>
        <label>Total Project Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H2S__TotalTime__c</fullName>
        <inlineHelpText>Total of time cards logged in Harvest (both invoiced and uninvoiced)</inlineHelpText>
        <label>Total Time</label>
        <summarizedField>H2S__HarvestTimeEntry__c.H2S__Duration__c</summarizedField>
        <summaryForeignKey>H2S__HarvestTimeEntry__c.H2S__HarvestProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>H2S__UninvoicedTime__c</fullName>
        <inlineHelpText>Total of time cards in Harvest which are NOT marked as invoiced.</inlineHelpText>
        <label>Uninvoiced Time</label>
        <summarizedField>H2S__HarvestTimeEntry__c.H2S__Duration__c</summarizedField>
        <summaryFilterItems>
            <field>H2S__HarvestTimeEntry__c.H2S__Invoiced__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>H2S__HarvestTimeEntry__c.H2S__HarvestProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>H2S__All</fullName>
        <columns>NAME</columns>
        <columns>H2S__ProjectCode__c</columns>
        <columns>H2S__ProjectCodeExternalId__c</columns>
        <columns>H2S__DaysSinceTimeLastLogged__c</columns>
        <columns>H2S__InvoicedTime__c</columns>
        <columns>H2S__UninvoicedTime__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>H2S__DateCompleted__c</columns>
        <columns>H2S__SyncStatus__c</columns>
        <columns>H2S__HarvestProjectID__c</columns>
        <columns>H2S__LastHarvestSync__c</columns>
        <filterScope>Everything</filterScope>
        <label>Projects - All</label>
    </listViews>
    <listViews>
        <fullName>H2S__My_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>H2S__DateStarted__c</columns>
        <columns>H2S__DaysSinceTimeLastLogged__c</columns>
        <columns>H2S__InvoicedTime__c</columns>
        <columns>H2S__UninvoicedTime__c</columns>
        <columns>H2S__TotalTime__c</columns>
        <columns>H2S__Burn__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>H2S__DateCompleted__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Active Projects</label>
    </listViews>
    <listViews>
        <fullName>H2S__My_Completed_Projects</fullName>
        <columns>NAME</columns>
        <columns>H2S__DateStarted__c</columns>
        <columns>H2S__InvoicedTime__c</columns>
        <columns>H2S__UninvoicedTime__c</columns>
        <columns>H2S__TotalTime__c</columns>
        <columns>H2S__Burn__c</columns>
        <columns>H2S__DateCompleted__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>H2S__DateCompleted__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Completed Projects</label>
    </listViews>
    <listViews>
        <fullName>H2S__Projects_Active</fullName>
        <columns>NAME</columns>
        <columns>H2S__DateStarted__c</columns>
        <columns>H2S__DaysSinceTimeLastLogged__c</columns>
        <columns>H2S__InvoicedTime__c</columns>
        <columns>H2S__UninvoicedTime__c</columns>
        <columns>H2S__TotalTime__c</columns>
        <columns>H2S__Burn__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>H2S__DateCompleted__c</field>
            <operation>equals</operation>
        </filters>
        <label>Projects - Active</label>
    </listViews>
    <listViews>
        <fullName>H2S__Projects_Completed</fullName>
        <columns>NAME</columns>
        <columns>H2S__DateStarted__c</columns>
        <columns>H2S__ProjectDays__c</columns>
        <columns>H2S__InvoicedTime__c</columns>
        <columns>H2S__UninvoicedTime__c</columns>
        <columns>H2S__TotalTime__c</columns>
        <columns>H2S__Burn__c</columns>
        <columns>H2S__DateCompleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>H2S__DateCompleted__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Projects - Completed</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>H2S__Budget_by_Hours_without_budget</fullName>
        <active>true</active>
        <description>If the project has an hourly budget, then require budgeted hours to be populated.</description>
        <errorConditionFormula>and( ISPICKVAL( H2S__Budget__c , &quot;Total project hours&quot;) , ISBLANK( H2S__TotalProjectHours__c ) )</errorConditionFormula>
        <errorDisplayField>H2S__TotalProjectHours__c</errorDisplayField>
        <errorMessage>You must enter the Budget # of Hours for this project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>H2S__Warn_on_Late_Start_Date</fullName>
        <active>false</active>
        <description>Provide warning if Date Started is AFTER the Earliest Time Logged date.</description>
        <errorConditionFormula>H2S__DateStarted__c &gt;  H2S__EarliestTimeLogged__c</errorConditionFormula>
        <errorDisplayField>H2S__DateStarted__c</errorDisplayField>
        <errorMessage>Date Started must be ON or BEFORE Earliest Time Logged date</errorMessage>
    </validationRules>
</CustomObject>